// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`8f4e compiler error fixtures > instructions/float64-comparison/equal-mixed-width.error.8f4e 1`] = `
{
  "code": 33,
  "context": {
    "codeBlockId": "equalMixedFloatWidth",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [],
    "instruction": "equal",
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  "message": "Mixed float widths: arithmetic operations require all float operands to have the same width (float32 or float64). (33)",
}
`;

exports[`8f4e compiler error fixtures > instructions/float64-comparison/greater-or-equal-mixed-width.error.8f4e 1`] = `
{
  "code": 33,
  "context": {
    "codeBlockId": "greaterOrEqualMixedFloatWidth",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [],
    "instruction": "greaterOrEqual",
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  "message": "Mixed float widths: arithmetic operations require all float operands to have the same width (float32 or float64). (33)",
}
`;

exports[`8f4e compiler error fixtures > instructions/float64-comparison/greater-or-equal-unsigned-mixed-width.error.8f4e 1`] = `
{
  "code": 33,
  "context": {
    "codeBlockId": "greaterOrEqualUnsignedMixedFloatWidth",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [],
    "instruction": "greaterOrEqualUnsigned",
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  "message": "Mixed float widths: arithmetic operations require all float operands to have the same width (float32 or float64). (33)",
}
`;

exports[`8f4e compiler error fixtures > instructions/float64-comparison/greater-than-mixed-width.error.8f4e 1`] = `
{
  "code": 33,
  "context": {
    "codeBlockId": "greaterThanMixedFloatWidth",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [],
    "instruction": "greaterThan",
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  "message": "Mixed float widths: arithmetic operations require all float operands to have the same width (float32 or float64). (33)",
}
`;

exports[`8f4e compiler error fixtures > instructions/float64-comparison/less-or-equal-mixed-width.error.8f4e 1`] = `
{
  "code": 33,
  "context": {
    "codeBlockId": "lessOrEqualMixedFloatWidth",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [],
    "instruction": "lessOrEqual",
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  "message": "Mixed float widths: arithmetic operations require all float operands to have the same width (float32 or float64). (33)",
}
`;

exports[`8f4e compiler error fixtures > instructions/float64-comparison/less-than-mixed-width.error.8f4e 1`] = `
{
  "code": 33,
  "context": {
    "codeBlockId": "lessThanMixedFloatWidth",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [],
    "instruction": "lessThan",
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  "message": "Mixed float widths: arithmetic operations require all float operands to have the same width (float32 or float64). (33)",
}
`;

exports[`8f4e compiler error fixtures > instructions/function-end/float-returned-as-float64.error.8f4e 1`] = `
{
  "code": 18,
  "context": {
    "codeBlockId": "functionEndFloatReturnedAsFloat64",
    "codeBlockType": "function",
  },
  "line": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "float64",
      },
    ],
    "instruction": "functionEnd",
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  "message": "Stack elements do not match function return signature. (18)",
}
`;

exports[`8f4e compiler error fixtures > instructions/function-end/float64-returned-as-float.error.8f4e 1`] = `
{
  "code": 18,
  "context": {
    "codeBlockId": "functionEndFloat64ReturnedAsFloat",
    "codeBlockType": "function",
  },
  "line": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "float",
      },
    ],
    "instruction": "functionEnd",
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  "message": "Stack elements do not match function return signature. (18)",
}
`;

exports[`8f4e compiler error fixtures > instructions/map/default-outside-map-block.error.8f4e 1`] = `
{
  "code": 13,
  "context": {
    "codeBlockId": "mapDefaultOutsideBlock",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 10,
      },
    ],
    "instruction": "default",
    "lineNumberAfterMacroExpansion": 3,
    "lineNumberBeforeMacroExpansion": 3,
  },
  "message": "This instruction can only be used within a block or a module. (13)",
}
`;

exports[`8f4e compiler error fixtures > instructions/map/default-unresolved-identifier.error.8f4e 1`] = `
{
  "code": 5,
  "context": {
    "codeBlockId": "mapDefaultUnresolvedIdentifier",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [
      {
        "referenceKind": "constant",
        "scope": "local",
        "type": "identifier",
        "value": "MISSING_CONST",
      },
    ],
    "instruction": "default",
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  "message": "Undeclared identifier: MISSING_CONST. (5)",
}
`;

exports[`8f4e compiler error fixtures > instructions/map/default-value-type-mismatch.error.8f4e 1`] = `
{
  "code": 2,
  "context": {
    "codeBlockId": "mapDefaultValueTypeMismatch",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "int",
      },
    ],
    "instruction": "mapEnd",
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  "message": "The operation only accepts integer values as operands. (2)",
}
`;

exports[`8f4e compiler error fixtures > instructions/map/instruction-inside-map-block.error.8f4e 1`] = `
{
  "code": 34,
  "context": {
    "codeBlockId": "instructionInsideMapBlock",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [],
    "instruction": "add",
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  "message": "This instruction is not allowed inside this block type. (34)",
}
`;

exports[`8f4e compiler error fixtures > instructions/map/map-outside-map-block.error.8f4e 1`] = `
{
  "code": 13,
  "context": {
    "codeBlockId": "mapOutsideMapBlock",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
      {
        "isInteger": true,
        "type": "literal",
        "value": 10,
      },
    ],
    "instruction": "map",
    "lineNumberAfterMacroExpansion": 4,
    "lineNumberBeforeMacroExpansion": 4,
  },
  "message": "This instruction can only be used within a block or a module. (13)",
}
`;

exports[`8f4e compiler error fixtures > instructions/map/map-value-unresolved-identifier.error.8f4e 1`] = `
{
  "code": 5,
  "context": {
    "codeBlockId": "mapValueUnresolvedIdentifier",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 1,
      },
      {
        "referenceKind": "constant",
        "scope": "local",
        "type": "identifier",
        "value": "MISSING_CONST",
      },
    ],
    "instruction": "map",
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  "message": "Undeclared identifier: MISSING_CONST. (5)",
}
`;

exports[`8f4e compiler error fixtures > instructions/map/multi-character-string-key.error.8f4e 1`] = `
{
  "code": 2,
  "context": {},
  "line": {
    "instruction": "map",
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  "message": "Invalid argument for map: string literals must contain exactly one character.",
}
`;

exports[`8f4e compiler error fixtures > instructions/map/one-argument-map-outside-map-block.error.8f4e 1`] = `
{
  "code": 13,
  "context": {
    "codeBlockId": "oneArgumentMapOutsideMapBlock",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [
      {
        "isInteger": true,
        "type": "literal",
        "value": 10,
      },
    ],
    "instruction": "map",
    "lineNumberAfterMacroExpansion": 4,
    "lineNumberBeforeMacroExpansion": 4,
  },
  "message": "This instruction can only be used within a block or a module. (13)",
}
`;

exports[`8f4e compiler error fixtures > instructions/map/row-key-type-mismatch.error.8f4e 1`] = `
{
  "code": 2,
  "context": {
    "codeBlockId": "mapRowKeyTypeMismatch",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [
      {
        "isInteger": false,
        "type": "literal",
        "value": 1.5,
      },
      {
        "isInteger": true,
        "type": "literal",
        "value": 10,
      },
    ],
    "instruction": "map",
    "lineNumberAfterMacroExpansion": 5,
    "lineNumberBeforeMacroExpansion": 5,
  },
  "message": "The operation only accepts integer values as operands. (2)",
}
`;

exports[`8f4e compiler error fixtures > instructions/map/row-value-type-mismatch.error.8f4e 1`] = `
{
  "code": 2,
  "context": {
    "codeBlockId": "mapRowValueTypeMismatch",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [
      {
        "referenceKind": "plain",
        "scope": "local",
        "type": "identifier",
        "value": "int",
      },
    ],
    "instruction": "mapEnd",
    "lineNumberAfterMacroExpansion": 6,
    "lineNumberBeforeMacroExpansion": 6,
  },
  "message": "The operation only accepts integer values as operands. (2)",
}
`;

exports[`8f4e compiler error fixtures > instructions/remainder/may-divide-by-zero.error.8f4e 1`] = `
{
  "code": 14,
  "context": {
    "codeBlockId": "remainderMayDivideByZero",
    "codeBlockType": "module",
  },
  "line": {
    "arguments": [],
    "instruction": "remainder",
    "lineNumberAfterMacroExpansion": 9,
    "lineNumberBeforeMacroExpansion": 9,
  },
  "message": "Possible division by zero. (14)",
}
`;
